--- a/resume.html
+++ b/resume.html
@@ -306,8 +306,8 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= Certifiactions Section ======= -->
-    <section id="certifiactions" class="portfolio section-bg">
+    <!-- ======= Certifications Section ======= -->
+    <section id="certifications" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
