--- a/resume.html
+++ b/resume.html
@@ -68,7 +68,8 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
+    <!-- <div class="hero-container" data-aos="fade-in"> -->
+      <div class="container aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
       <h1>Kameswara Rao Pudi</h1>
       <p>I'm <span class="typed" data-typed-items="Cloud Architect, DevOps Architect, Technical Implementation Specialist"></span></p>
     </div>
@@ -115,7 +116,7 @@
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kamesh.pudi@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kamesh.pudi2014@hotmail.com</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                 </ul>
               </div>
