--- a/resume.html
+++ b/resume.html
@@ -68,8 +68,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <!-- <div class="hero-container" data-aos="fade-in"> -->
-      <div class="container aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+    <div class="hero-container" data-aos="fade-in">
       <h1>Kameswara Rao Pudi</h1>
       <p>I'm <span class="typed" data-typed-items="Cloud Architect, DevOps Architect, Technical Implementation Specialist"></span></p>
     </div>
