--- a/resume.html
+++ b/resume.html
@@ -295,8 +295,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Certifications</h2>
-          <p><a href="https://www.credly.com/users/kameswara-rao-pudi.c863a94e/badges" class="credly"><i class="bx bxl-credly"></i></a> </p>
+          <h2><a href="https://www.credly.com/users/kameswara-rao-pudi.c863a94e/badges" target="_blank">Certifications</a></h2>
         </div>
 
         <div class="row" data-aos="fade-up">
