--- a/resume.html
+++ b/resume.html
@@ -505,12 +505,10 @@
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
         <!-- Designed by <a href="https://bootstrapmade.com/">Kameswara Rao Pudi</a> -->
         <!-- hitwebcounter Code START -->
+<!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
-  <img src="https://hitwebcounter.com/counter/counter.php?page=7995903&style=0036&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>  
-  
-      </div>
-    </div>
-  </footer> -->
+  <img src="https://hitwebcounter.com/counter/counter.php?page=8060524&style=0049&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>    </div>
+  </footer>
   <!-- End  Footer
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
