--- a/resume.html
+++ b/resume.html
@@ -95,7 +95,7 @@
               ► Expertise in Cloud Migration, Landing zone set up, Cloud Compliance and Cloud based solutions using Microsoft Azure & Azure Stack, Amazon AWS, Google Cloud.<br/>
               ► Cloud Solutioning expert, helping enterprises adopt public cloud platforms such as Microsoft Azure, Amazon Web Services and Google.<br/>
               ► Hands-on experience in building platforms and environments for application development, working on cloud hosted environments (Azure, Azure Stack,AWS and Google) using Infrastructure As a Code Terraform, ARM Templates and Cloud formation templates, building and implementing CI/CD pipelines. <br/>
-              ► Hands-on experience in DevOps Jenkins, GitHub, Terraform, Chef, PowerShell, Shell scripting, Python, ruby, DSC, Docker, Kubernetes.<br/>
+              ► Hands-on experience in DevOps Jenkins, GitHub, GitOps, ArgoCD, HELM, Kubernetes(AKS), Terraform, Chef, PowerShell, Shell scripting, Python, ruby, DSC, Docker, Kubernetes.<br/>
               ► Hands-on experience in using Cloud Platforms (Azure IaaS, Azure PaaS, Private Cloud - Azure Stack, AWS) and Microsoft Technologies (.NET Framework, C#, ASP.NET MVC, Web API, WPF, WCF, JavaScript, jQuery, SQL Server and SharePoint).<br/>
               ► Well versed with Cloud Computing, Micro services, Containerization, SOA, OOAD, and Design Patterns. Good Understanding of Software Development Methodologies (Agile and Waterfall) and Software Development Life Cycle.<br/>
               ► Domain Exposure in the areas of Investment Banking, Energy and Utilities, Health Care, Manufacturing.<br/>
