--- a/resume.html
+++ b/resume.html
@@ -303,6 +303,8 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-azure">Azure</li>
+              <li data-filter=".filter-aws">AWS</li>
+              <li data-filter=".filter-google">Google</li>
               <li data-filter=".filter-other">Others</li>
             </ul>
           </div>
@@ -313,9 +315,6 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-azure">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/az-ai-900.png" class="img-fluid" alt="">
-              <!-- <div class="portfolio-links">
-                <a href="assets/img/portfolio/az-ai-900.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-              </div> -->
             </div>
           </div>
 
@@ -373,9 +372,23 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-aws">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/aws.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-aws">
+            <div class="portfolio-wrap">
+             <a href="https://www.credly.com/badges/6ae6230b-ebde-4614-8e7c-43fd14313975" target="_blank">
+              <img src="assets/img/portfolio/aws-sa.png" class="img-fluid" alt="" > 
+            </a> 
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-google">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/gcpa.png" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -419,78 +432,7 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Contact Section ======= -->
-    <!-- <section id="contact" class="contact">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row" data-aos="fade-in">
-
-          <div class="col-lg-5 d-flex align-items-stretch">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
-              </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-            </div>
-
-          </div>
-
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div>
-
-        </div>
-
-      </div>
-    </section> -->
-    <!-- End Contact Section -->
-
-  </main><!-- End #main -->
+    </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -499,17 +441,11 @@
         &copy; Copyright <strong><span>Kameswara Rao Pudi</span></strong>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        <!-- Designed by <a href="https://bootstrapmade.com/">Kameswara Rao Pudi</a> -->
-        <!-- hitwebcounter Code START -->
 <!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
   <img src="https://hitwebcounter.com/counter/counter.php?page=8060524&style=0049&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>    </div>
   </footer>
-  <!-- End  Footer
+  <!-- End  Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
