--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Certifications</span></a></li>
-          <li><a href="documentation/index.html" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Share Logic</span></a></li>
+          <li><a href="documentation/index.html" class="nav-link scrollto" target="_blank"><i class="bx bx-server"></i> <span>Share Logic</span></a></li>
           
         </ul>
       </nav><!-- .nav-menu -->
