--- a/documentation/kubernetes/postgres-kubernetes-persistent-volume.html
+++ b/documentation/kubernetes/postgres-kubernetes-persistent-volume.html
@@ -34,7 +34,7 @@
 
       <a href="../index.html" class="logo d-flex align-items-center">
         <img src="../assets/img/logo.png" alt="">
-        <span>KnowledgeShare</span>
+        <span>ShareLogic</span>
       </a>
 
       <nav id="navbar" class="navbar">
